Now the transition is working left with working on the ViewPort all the types

--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-
     <!-- Theme Outline css -->
     <link rel="stylesheet" href="css/theme-outline.min.css" >
 
     <!-- Theme Colors CSS -->
     <link rel="stylesheet" href="css/theme-color.min.css" >
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+
+
+
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="css/animate.css" >
+    <link rel="stylesheet" href="css/animate.min.css" >
 
 
 
     <title>Theme</title>
 </head>
-<body>
+<body style="overflow:hidden;">
 
-<div id="MAIN_WRAPPER" class="">
-    <div id="DASHBOARD" class="bg-dark">
-        <div  class="navbar Theme-light blue-light justify-content-center">
+<div id="MAIN_WRAPPER" class="" style="">
+    <div id="DASHBOARD" class="bg-dark" style="">
+        <div  class="navbar Theme-light blue-light justify-content-start">
             <span class="navbar-text ">DASHBOARD</span>
         </div>
         <div>
@@ -61,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div id="BODY">
+    <div id="BODY" style=" ">
         <div class="border-left border-dark">
             <div id="HEADER" class="Theme-dark blue-dark">
                 <div id="btnDashToggle" class="navbar">
@@ -179,6 +181,10 @@
 <script src="js/bootstrap.min.js" ></script>
 <script src="js/theme-outline.min.js" ></script>
 <script src="js/theme-color.min.js" ></script>
+<script >
+
+
+</script>
 
 </body>
 </html>
