The droupdown is now left

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <button  onclick="ToggleThemeState(DashboardState);" type="button" class="btn Theme-dark blue-dark ">&#9776</button>
                     <span class="navbar-text">BRAINSOFT SOLUTIONS</span>
 
-                    <div class="dropdown ">
+                    <div class="dropleft ">
                         <button class="btn Theme-dark blue-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             ACCOUNT
                         </button>
